--- a/src/Architecture/MODEL_CONFIGS.json
+++ b/src/Architecture/MODEL_CONFIGS.json
@@ -10,6 +10,16 @@
     "drop_rate": 0.1, 
     "qkv_bias": false,
     "_comment": "purpose: one possible configuration of the dummy model architecture."
-    }
+    },
+
+    "XPERYV2_CONFIG" : {
+            "vocab_size": 50257,     
+            "context_length": 1024,  
+            "emb_dim": 768,          
+            "n_heads": 12,           
+            "n_layers": 12,          
+            "drop_rate": 0.1,        
+            "qkv_bias": false        
+        }
 
 }
